<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuyerPostProject">

    <LinearLayout
        android:id="@+id/linearLayoutPostProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue2">

        <ImageButton
            android:id="@+id/backToBuyerAcc"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:backgroundTint="@color/dark_blue2"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BuyerAcc_postProject_MainTitle"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="18dp" />

    </LinearLayout>

       <!-- <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="55dp"
            android:outlineAmbientShadowColor="@color/grey"
            android:outlineSpotShadowColor="@color/grey"
            android:background="@color/light_grey3" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_below="@+id/linearLayoutPostProject"
        android:layout_above="@id/linearBtnProPublish"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="17dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_Title"/>

            <EditText
                android:id="@+id/post_title"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/BuyerAcc_postProject_TitleDesc"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textColorHint="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_Desc"/>

            <EditText
                android:id="@+id/post_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="60dp"
                android:gravity="top"
                android:paddingTop="15dp"
                android:paddingStart="12dp"
                android:paddingEnd="14dp"
                android:background="@drawable/custom_input"
                android:lineSpacingExtra="3dp"
                android:hint="@string/BuyerAcc_postProject_DesSub"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textColorHint="@color/grey"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_CategoryTitle"/>

            <RadioGroup
                android:id="@+id/categoryGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="6dp">

                <RadioButton
                    android:id="@+id/post_radioGraphic"
                    android:layout_marginLeft="13dp"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:textSize="14dp"
                    android:text="@string/GraphicTitle" />

                <RadioButton
                    android:id="@+id/post_radioTech"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="13dp"
                    android:textSize="14dp"
                    android:text="@string/TechTitle" />

                <RadioButton
                    android:id="@+id/post_radioWriting"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="13dp"
                    android:textSize="14dp"
                    android:text="@string/WritingTitle" />

                <RadioButton
                    android:id="@+id/post_radioData"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:textSize="14dp"
                    android:layout_marginLeft="13dp"
                    android:text="@string/DataTitle" />

                <RadioButton
                    android:id="@+id/post_radioVideo"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:textSize="14dp"
                    android:text="@string/VideoTitle" />

                <RadioButton
                    android:id="@+id/post_radioMarketing"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="13dp"
                    android:textSize="14dp"
                    android:text="@string/MarketingTitle" />

            </RadioGroup>

            <TextView
                android:layout_marginTop="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_BudgetTitle"/>

            <EditText
                android:id="@+id/post_budget"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/BuyerAcc_postProject_BudgetDesc"
                android:textSize="15dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_DeliveryDaysTitle"/>

            <EditText
                android:id="@+id/post_days"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/BuyerAcc_postProject_DeliveryDaysDesc"
                android:textSize="15dp"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="number"/>

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/BuyerAcc_postProject_StatusTitle"/>

            <RadioGroup
                android:id="@+id/statusGroup"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <RadioButton
                    android:id="@+id/post_radioOpen"
                    android:layout_width="180dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:textSize="14dp"
                    android:text="@string/BuyerAcc_postProject_radioOpen" />

                <RadioButton
                    android:id="@+id/post_radioClose"
                    android:layout_width="180dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:textSize="14dp"
                    android:layout_marginLeft="13dp"
                    android:text="@string/BuyerAcc_postProject_radioClose" />

                <RadioButton
                    android:id="@+id/post_radioCompleted"
                    android:layout_width="180dp"
                    android:layout_height="28dp"
                    android:textSize="14dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="13dp"
                    android:text="@string/BuyerAcc_postProject_radioComplete" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

        <LinearLayout
            android:id="@+id/linearBtnProPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btn_projectPublish"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:cornerRadius="10dp"
                android:textStyle="bold"
                android:textSize="14dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_publish"/>

        </LinearLayout>

</RelativeLayout>